--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "telegram_token": "8083809503:AAHfZXg0ebvXrnq1i_RaGYZYp6eVcChwaPM",
-  "telegram_chat_id": "8305468548",
+  "telegram_token": "xx",
+  "telegram_chat_id": "yy",
   "max_run": 2,
   "assets_dir": "src/assets/working/"
 }
